--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@capacitor/keyboard": "latest",
     "@capacitor/status-bar": "latest",
     "@ionic/angular": "^8.0.0",
+    "@jcesarmobile/ssl-skip": "0.4.0",
+    "bootstrap": "^5.3.3",
     "ionicons": "^7.2.1",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
